--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,11 +8,15 @@ services:
     depends_on:
       - backend
       - db
+    ports:
+      - "3000:3000"  # Map host port 3000 to container port 3000 for the frontend
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    ports:
+      - "5000:5000"  # Map host port 5000 to container port 5000 for the backend
 
   db:
     image: mongo:latest
